renaming selfcare model, routes.  adding model forms

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,7 +34,25 @@ html(lang='en')
                 a(href='/casebook/symptoms') All symptoms
               li 
                 a(href='/casebook/vendors') All vendors
-
-                
+                hr
+              li 
+                a(href='/casebook/case/create') Create new case
+              li 
+                a(href='/casebook/food/create') Create new food
+              li 
+                a(href='/casebook/germ/create') Create new germ
+              li 
+                a(href='/casebook/lab/create') Create new lab
+                a(href='/casebook/medical_facility/create') Create new medical facility
+              li 
+                a(href='/casebook/patient/create') Create new patient
+              li 
+                a(href='/casebook/prevention_tip/create') Create new prevention tip
+              li 
+                a(href='/casebook/recommendation/create') Create new care recommendation                
+                a(href='/casebook/symptom/create') Create new symptom
+              li 
+                a(href='/casebook/vendor/create') Create new vendor
+             
         div(class='col-sm-10')
           block content
