--- a/views/food_form.pug
+++ b/views/food_form.pug
@@ -6,15 +6,14 @@ block content
   form(method='POST' action='')
     div.form-group
       label(for='name') Food:
-      input#name.form-control(type='text', placeholder='Chicken, Alfalfa Sprouts etc.' name='name' value=(undefined===food ? '' : food.name))
+      input#food_name.form-control(type='text', placeholder='Chicken, Alfalfa Sprouts etc.' name='name' value=(undefined===food ? '' : food.name))
 
-      label(for='type') Food:
-      input#type.form-control(type='text', placeholder='Poultry, Vegetables etc.' type='type' value=(undefined===food ? '' : food.type))
+      label(for='category') Category:
+      input#food_category.form-control(type='text', placeholder='Poultry, Vegetables etc.' category='category' value=(undefined===food ? '' : food.category))
 
-      label(for='preparation') Food:
-      input#preparation.form-control(type='text', placeholder='Cooked or Raw.' preparation='preparation' value=(undefined===food ? '' : food.preparation))
+      label(for='preparation') Preparation:
+      input#food_preparation.form-control(type='text', placeholder='Cooked or Raw.' preparation='preparation' value=(undefined===food ? '' : food.preparation))
     button.btn.btn-primary(type='submit') Submit
-
   if errors 
     ul
       for error in errors
